# lprec

./: .gitignore  .loglogin  .nfs000000000065b69c00000b88  .nfs000000000107631100000422  .nfs00000000010763120000043a  .nfs000000000111c52200000b89  .nfs0000000001153ef300000244  .nfs00000000016d46ff00000d4f  CMakeLists.txt  MANIFEST.in  MANIFEST.txt  README  README.md  README.rst  conda_build_config.yaml  lpRgpu.py  meta.yaml  setup.py
lprec/: __init__.py  initsadj.py  initsfwd.py  initsgl.py  iterative.py  lpRgpu.py  lpTransform.py  lpmethods.py  timing.py
lprec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recipe/: conda_build_config.yaml  meta.yaml
src/: callerr.cu  config.cuh  lpRgpu.cu  lpRgpu.cuh  lpRgpu.i  lpRgpu.py  lpRgpu_wrap.cpp  math_operators.cuh  params.cu  simple_kernels.cuh
src/cuda/: CMakeLists.txt  gridStorage.cu  lpRgpu.cu  lpRgpu.i
src/include/: gridStorage.cuh  lpRgpu.cuh  main_kernels.cuh
src/lprec/: __init__.py  initsadj.py  initsfwd.py  initsgl.py  lpTransform.py
tests/: .multirate.py.swp  run_test.py  test_adj.py  test_adj2.py  test_adj_many.py  test_adj_many2.py  test_adj_ptr.py  test_adj_resample.py  test_em.py  test_em_prof.py  test_foam.py  test_gpus_many.py  test_gpus_many2.py  test_gpus_many_map.py  test_imp.py  test_lpmethods.py  test_perf.py  test_time.py  test_tv.py  timing.py
tests/data/: R  f
tests/matlab_files/: apply_filter_2d_exact.m  apply_filter_exact.m  fRphantom.m  fphantom.m  make_bubles.m  make_phantom.m  wint.m
